--- a/frontend/src/components/MenuHeader/style.css
+++ b/frontend/src/components/MenuHeader/style.css
@@ -4,4 +4,41 @@
     background: #fff;
     border-bottom: 0.06rem solid #cecece;
     box-shadow: 0 0.12rem 0.12rem -0.12rem #333;
+}
+
+.menuHeader ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.menuHeader > ul {
+    display: flex;
+    margin: 0 3rem;
+    position: relative;
+}
+
+.menuHeader > ul > li > span {
+    display: block;
+    line-height: 2.5rem;
+    cursor: pointer;
+    padding: 0 1.25rem;
+    font-size: 0.8rem;
+}
+
+.menuHeader > ul > li > span:hover{
+    color: #2874f0;
+
+}
+
+.menuHeader > ul > li > ul {
+    position: absolute;
+    background: bisque;
+    left: 0;
+    right: 0;
+    display: none;
+}
+
+.menuHeader > ul > li:hover ul{
+    display: block;
 } 
